# blind_handover_controller

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
config/: config.yaml  ur10e.yaml  ur5e.yaml
config/robots/: ur10.yaml  ur10e.yaml  ur16e.yaml  ur3.yaml  ur3e.yaml  ur5.yaml  ur5e.yaml
data/Test 1 - [2024-02-07 -- 12-41-48]/: ft_sensor_data.csv  joint_states_data.csv
data/Test 10 - [2024-02-07 -- 13-11-40]/: ft_sensor_data.csv  joint_states_data.csv
data/Test 100 - [2024-02-07 -- 16-16-22]/: ft_sensor_data.csv  joint_states_data.csv
data/Test 101 - [2024-02-07 -- 16-19-12]/: ft_sensor_data.csv  joint_states_data.csv
data/Test 102 - [2024-02-07 -- 16-19-46]/: ft_sensor_data.csv  joint_states_data.csv
data/Test 103 - [2024-02-07 -- 16-20-23]/: ft_sensor_data.csv  joint_states_data.csv
data/Test 104 - [2024-02-07 -- 16-20-57]/: ft_sensor_data.csv  joint_states_data.csv
data/Test 105 - [2024-02-07 -- 16-21-30]/: ft_sensor_data.csv  joint_states_data.csv
data/Test 106 - [2024-02-07 -- 16-22-03]/: ft_sensor_data.csv  joint_states_data.csv
data/Test 107 - [2024-02-07 -- 16-22-43]/: ft_sensor_data.csv  joint_states_data.csv
data/Test 108 - [2024-02-07 -- 16-24-29]/: ft_sensor_data.csv  joint_states_data.csv
data/Test 109 - [2024-02-07 -- 16-25-01]/: ft_sensor_data.csv  joint_states_data.csv
data/Test 11 - [2024-02-07 -- 13-12-40]/: ft_sensor_data.csv  joint_states_data.csv
data/Test 110 - [2024-02-07 -- 16-25-35]/: ft_sensor_data.csv  joint_states_data.csv
data/Test 111 - [2024-02-07 -- 16-26-12]/: ft_sensor_data.csv  joint_states_data.csv
data/Test 112 - [2024-02-07 -- 16-26-45]/: ft_sensor_data.csv  joint_states_data.csv
data/Test 113 - [2024-02-07 -- 16-27-22]/: ft_sensor_data.csv  joint_states_data.csv
doc/: Experiment FT-Sensor.md
launch/: experiment.launch.py  ft_experiment.launch.py  handover_controller.launch.py  pfl_controller.launch.py  standard_experiment.launch.py  standard_handover.launch.py
model/: LSTM_config_1000_10_wou.ini  LSTM_config_1000_10_wou_d.ini  LSTM_config_200_10_wou.ini  LSTM_config_250_10_wou.ini  LSTM_config_250_10_wou_d.ini  LSTM_config_500_10_wou_d.ini  MultiClassifier_config_200_10_wou.ini  config.ini  model.pth
scripts/: admittance.py  handover_controller.py  kinematic_wrapper.py  move_robot.py  pfl_controller.py  power_force_limiting.py  robot_toolbox.py  safety_controller.py  standard_handover.py  ur_kinematic_wrapper.py
src/: tasks.py
(+674 files in other folders)
