<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>handover_controller</name>
  <version>0.0.0</version>
  <description>ROS2 Handover Controller</description>

  <!-- Maintainer, Author, License -->
  <maintainer email="davide.ferrari95@unimore.it">Davide Ferrari</maintainer>
  <author email="davide.ferrari95@unimore.it">Davide Ferrari</author>
  <license>BSD-3</license>

  <!-- Build Dependancies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- ROS Dependancies -->
  <depend>rclpy</depend>

  <!-- LaunchFiles Dependancies -->
  <exec_depend>ros2launch</exec_depend>

  <!-- Message Dependancies -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Test Dependancies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
